--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main>
+        <section class="section1">
+            <h1>Building Frontend Skills <br><span>in 30 Days</span></h1>
+            <p>A collection of daily frontend mini projects created over 30 days to practice and improve HTML, CSS, and JavaScript skills through real, hands-on development.</p>
+        </section>
+        <section class="section2">
+            <a href="./ParalexEffect/index.html" target="_blank" class="box box1">
+                <span>1.</span> <br> <h3>Paralex Effect</h3> <br> <p>Paralex effect using Background attach.</p>
+            </a>
+            <a href="./animated-images/index.html" target="_blank" class="box box2">
+                <span>2.</span> <br> <h3>Animated image</h3> <br> <p>Images auto change in secounds and create animated feature.</p>
+            </a>
+            <a href="./BentoGrid/index.html" target="_blank" class="box box3">
+                <span>3.</span> <br> <h3>BentoGrid</h3> <br> <p>for understanding the concept of grid and grid area.</p>
+            </a>
+            <a href="./Pintrest-layout/index.html" target="_blank" class="box box4">
+                <span>4.</span> <br> <h3>Pintrest Layout</h3> <br> <p>Pintrest layout to understanding concept of flex column.</p>
+            </a>
+        </section>
+    </main>
 </body>
 </html>
