Pintrest layout update

--- a/Pintrest-layout/index.html
+++ b/Pintrest-layout/index.html
@@ -28,10 +28,45 @@
         </aside>
         <section>
             <nav>
-                
+                <input type="text" placeholder="Search">
+                <img src="./Logo_YouTube_Social_Media_Business_PNG-removebg-preview.png" alt="">
+                <i class="ri-arrow-drop-down-line"></i>
             </nav>
             <div class="images">
+                <img src="./Pictures/2024 by Michael Rueger.jpeg" alt="">
+                <img src="./Pictures/#royalty #mysorepalace #karnataka #justwow.jpeg" alt="">
+                <img src="./Pictures/6b88b36b-3fb5-4e2a-8a04-176ac913481d.jpeg" alt="">
+                <img src="./Pictures/751bf624-d8da-4c0c-9b1e-de9f68dc2ef4.jpeg" alt="">
+                <img src="./Pictures/A Man With Glasses And A Beard In Front Of A White Background That Says I Am A.jpeg" alt="">
+                <img src="./Pictures/Best Laptops 2025 – Top Picks for Students, Work & Gaming.jpeg" alt="">
+                <img src="./Pictures/Boost Your Mood.jpeg" alt="">
+                <img src="./Pictures/one.jpeg" alt="">
+                <img src="./Pictures/Plainthing Studio.jpeg" alt="">
+                <img src="./Pictures/Porsche 911 GT3 – Poster by Apex.jpeg" alt="">
+                <img src="./Pictures/PROMPT.jpeg" alt="">
+                <img src="./Pictures/🌼.jpeg" alt="">
+                <img src="./Pictures/Wallpaper.jpeg" alt="">
+                <img src="./Pictures/Volodymyr Gruev.jpeg" alt="">
+                <img src="./Pictures/Vaziyet.jpeg" alt="">
+                <img src="./Pictures/Travelwise - website design.jpeg" alt="">
 
+                <img src="./Pictures/751bf624-d8da-4c0c-9b1e-de9f68dc2ef4.jpeg" alt="">
+                <img src="./Pictures/A Man With Glasses And A Beard In Front Of A White Background That Says I Am A.jpeg" alt="">
+                <img src="./Pictures/Best Laptops 2025 – Top Picks for Students, Work & Gaming.jpeg" alt="">
+                <img src="./Pictures/Boost Your Mood.jpeg" alt="">
+                <img src="./Pictures/one.jpeg" alt="">
+                <img src="./Pictures/Plainthing Studio.jpeg" alt="">
+                <img src="./Pictures/Porsche 911 GT3 – Poster by Apex.jpeg" alt="">
+
+                <img src="./Pictures/one.jpeg" alt="">
+                <img src="./Pictures/Plainthing Studio.jpeg" alt="">
+                <img src="./Pictures/Porsche 911 GT3 – Poster by Apex.jpeg" alt="">
+                <img src="./Pictures/PROMPT.jpeg" alt="">
+                <img src="./Pictures/🌼.jpeg" alt="">
+                <img src="./Pictures/Wallpaper.jpeg" alt="">
+                <img src="./Pictures/Volodymyr Gruev.jpeg" alt="">
+                <img src="./Pictures/Vaziyet.jpeg" alt="">
+                <img src="./Pictures/Travelwise - website design.jpeg" alt="">
             </div>
         </section>
     </main>
